# ImuCamera

./: CMakeLists.txt  DetectRegions.cpp  DetectRegions.h  HelloMotionModule.h  OCR.cpp  OCR.h  Plate.cpp  Plate.h  README.md  main.cpp  ui_HelloMotionModule.h
EasyProfile/: BasicTypes.h  EasyObjectDictionary.cpp  EasyObjectDictionary.h  EasyProfile.cpp  EasyProfile.h  EasyProtocol.cpp  EasyProtocol.h  EasyQueue.h  LibraryVersion.txt
